Add first real article: Jesus, why me?

--- a/articles/_index.yml
+++ b/articles/_index.yml
@@ -1,3 +1,10 @@
+jesus-why-me:
+  title: "Jesus, why ... ... ?"
+  publish: 2012-03-24
+  wp: 1
+  summary: "One question. One response. What would <em>you</em> ask Jesus?"
+  image: "http://i1259.photobucket.com/albums/ii553/doubleotoo/question_mark-shadow-thumb-1.png"
+
 hello-world:
   title: "Hello, world!"
   publish: 2012-03-18
